--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-
   <style>
     html, body { margin:0; height:100% }
     #map { position:absolute; inset:0 }
 
     .marker { cursor:pointer !important; }
-
     .mapboxgl-popup { filter: drop-shadow(0 14px 28px rgba(0,0,0,0.45)); }
 
     .mapboxgl-popup-content {
@@ -21,19 +19,17 @@
       border-radius:12px !important;
       border:none !important;
       box-shadow:0 10px 24px rgba(0,0,0,0.35) !important;
-      font-family:"Inter", system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif !important;
+      font-family:"Inter", system-ui,-apple-system, Segoe UI, Roboto, Arial, sans-serif !important;
       padding:12px 12px !important;
-      max-width:340px;             /* wider to fit the photo + text */
+      max-width:340px;
       width:max-content;
       position:relative;
     }
-
     .mapboxgl-popup-tip {
       border-top-color:#fff !important;
       border-bottom-color:#fff !important;
       margin-top:-2px;
     }
-
     /* Close button (bigger + offset) */
     .mapboxgl-popup-close-button {
       color:#333 !important;
@@ -53,11 +49,13 @@
     .popup-img{
       width:96px;
       height:76px;
-      border-radius:10px;          /* soft edges like your reference */
+      border-radius:10px;
       object-fit:cover;
+      display:block;
       flex:0 0 96px;
       user-select:none;
       -webkit-user-drag:none;
+      background:#eee;
     }
     .popup-heading {
       font-weight:700;
@@ -65,11 +63,11 @@
       line-height:1.3;
       margin:0 0 2px 0;
       color:#1E1E1E;
-      text-align:left;             /* title sits to the right of photo */
+      text-align:left;
       text-transform:none;
     }
 
-    /* centre the block as a whole, keep rows left-justified */
+    /* centre block, keep rows left-justified */
     .specs {
       margin-top:6px;
       font-size:13px;
@@ -77,7 +75,6 @@
       flex-direction:column;
       align-items:center;
     }
-
     .spec-row {
       display:flex;
       align-items:center;
@@ -85,35 +82,30 @@
       margin:2px 0;
       width:max-content;
     }
-
     .icon {
       width:16px;
       height:16px;
       flex:0 0 16px;
       color:#1E1E1E;
     }
-
     .spec-value {
       font-weight:800;
       color:#EC2629;
       text-transform:none;
     }
-
     .popup-actions {
       display:flex;
-      gap:6px;               /* tight “Hike Page & Directions” */
+      gap:6px;
       justify-content:center;
       align-items:center;
       margin-top:10px;
     }
-
     .popup-link {
       color:#3899EC;
       font-weight:600;
       text-decoration:none;
       -webkit-tap-highlight-color: transparent;
     }
-
     /* remove focus rings in popups */
     .popup-link:focus,
     .popup-link:focus-visible,
@@ -132,13 +124,19 @@
 
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.js"></script>
 <script src="https://unpkg.com/@tmcw/togeojson@5.8.0/dist/togeojson.umd.js"></script>
-
 <script>
 mapboxgl.accessToken =
 "pk.eyJ1IjoicmVtbWlhZ2JlYmkiLCJhIjoiY21odHRrYTQzMTk0bjJqcjE1b2xhZ2FraSJ9.nTCz33gX0gQt3T4A6VD0oQ";
 
 const RED  = "#EC2629";
 const BLUE = "#3899EC";
+
+/* Use RAW GitHub URLs for images */
+const IMG = {
+  derwent: "https://raw.githubusercontent.com/remmiagbebi-beep/peak-district-map/main/images/derwent-dam-tower.jpg",
+  crashed: "https://raw.githubusercontent.com/remmiagbebi-beep/peak-district-map/main/images/b29-overexposed-crash-site.jpg",
+  kinder:  "https://raw.githubusercontent.com/remmiagbebi-beep/peak-district-map/main/images/kinder-scout-carved-rock.png"
+};
 
 const hikes = [
   {
@@ -148,7 +146,7 @@ const hikes = [
     hikeUrl:"https://thelostpeak.co.uk/hikes/derwent-edge",
     directionsUrl:"https://www.google.com/maps/dir/?api=1&destination=53.400582126300236,-1.7427849606990842",
     gpx:"https://raw.githubusercontent.com/remmiagbebi-beep/peak-district-map/refs/heads/main/gpx/Derwent%20Edge.gpx",
-    photo:"/mnt/data/derwent-dam-tower.jpg",
+    photo:IMG.derwent,
     specs:{ duration:"3 to 4 hours", length:"7.4 miles", ascent:"367m" }
   },
   {
@@ -158,7 +156,7 @@ const hikes = [
     hikeUrl:"https://thelostpeak.co.uk/hikes/crashed-plane",
     directionsUrl:"https://www.google.com/maps/dir/?api=1&destination=53.4329,-1.8689",
     gpx:"https://raw.githubusercontent.com/remmiagbebi-beep/peak-district-map/refs/heads/main/gpx/The%20Crashed%20Plane%20Hike.gpx",
-    photo:"/mnt/data/b29-overexposed-crash-site.jpg",
+    photo:IMG.crashed,
     specs:{ duration:"2 to 3 hours", length:"3.6 miles", ascent:"145m" }
   },
   {
@@ -168,7 +166,7 @@ const hikes = [
     hikeUrl:"https://thelostpeak.co.uk/hikes/kinder-scout",
     directionsUrl:"https://www.google.com/maps/dir/?api=1&destination=53.364872107766416,-1.8151209383535991",
     gpx:"https://raw.githubusercontent.com/remmiagbebi-beep/peak-district-map/refs/heads/main/gpx/Kinder%20Scout%20Hike.gpx",
-    photo:"/mnt/data/kinder-scout-carved-rock.png",
+    photo:IMG.kinder,
     specs:{ duration:"4 to 6 hours", length:"8.3 miles", ascent:"562m" }
   }
 ];
@@ -193,20 +191,16 @@ function setMarkerColor(id,color){
   const path = el.querySelector("svg path");
   if(path) path.setAttribute("fill",color);
 }
-
 function setRouteColor(id,color){
   const lyr = routeLayerId[id];
   if(lyr && map.getLayer(lyr)){
     map.setPaintProperty(lyr,"line-color",color);
   }
 }
-
 function applyHoverState(){
   rafToken=null;
-
   Object.keys(routeLayerId).forEach(id=>setRouteColor(id,RED));
   Object.keys(markerElsById).forEach(id=>setMarkerColor(id,RED));
-
   if(hoveredId){
     setRouteColor(hoveredId,BLUE);
     setMarkerColor(hoveredId,BLUE);
@@ -215,7 +209,6 @@ function applyHoverState(){
     map.getCanvas().style.cursor="";
   }
 }
-
 function setHovered(id){
   hoveredId=id;
   if(!rafToken) rafToken=requestAnimationFrame(applyHoverState);
@@ -233,7 +226,6 @@ function specsHTML(s,urls){
       <div class="spec-row">${icons.clock}<span class="spec-value">${s.duration}</span></div>
       <div class="spec-row">${icons.length}<span class="spec-value">${s.length}</span></div>
       <div class="spec-row">${icons.ascent}<span class="spec-value">${s.ascent}</span></div>
-
       <div class="popup-actions">
         <a class="popup-link" tabindex="-1" href="${urls.hikeUrl}" target="_blank">Hike Page</a>
         <span style="font-weight:800;">&amp;</span>
@@ -268,14 +260,11 @@ async function loadGpx(gpxUrl){
   const gj=toGeoJSON.gpx(xml);
   return gj.features.find(f=>f.geometry && f.geometry.type==="LineString");
 }
-
 function addRoute(id,line){
   const src=`route-src-${id}`;
   const lyr=`route-lyr-${id}`;
-
   if(!map.getSource(src))
     map.addSource(src,{type:"geojson",data:line});
-
   if(!map.getLayer(lyr)){
     map.addLayer({
       id:lyr,
@@ -290,7 +279,6 @@ function addRoute(id,line){
       }
     });
   }
-
   routeLayerId[id]=lyr;
 }
 
